--- a/_posts/2020-07-09-crocs.markdown
+++ b/_posts/2020-07-09-crocs.markdown
@@ -101,7 +101,7 @@ Notosuchia is a very diverse, very derived group of mostly smallish terrestrial 
 
 Above: *Simosuchus*, meaning “pug croc,” a pug-sized, heavily armored herbivore from Late Cretaceous Madagascar.  10/10 would pet.
 
-![anatosuchus](/assets/anatosuchus.png)
+![anatosuchus](/assets/images/posts/anatosuchus.png)
 
 Above: *Anatosuchus*, meaning “duck croc,” a real-life reverse example of the famous fictional “crocoduck” (which has the head of a croc and body of a duck).
 
