--- a/_posts/2020-07-09-crocs.markdown
+++ b/_posts/2020-07-09-crocs.markdown
@@ -13,7 +13,7 @@ hidden: true
 I said my [Aquatic Reptiles post](https://obscuredinosaurfacts.com/blog/post/2019/11/13/aquatic-reptiles.html) would be the last Mesozoic reptile family overview, but of course no trilogy is complete without a trilogy creep!  Crocodylians and their relatives used to be so much more diverse and prolific than they are today, but since the dinosaurs came out ahead after the Triassic-Jurassic extinction event and ruled for the rest of the Mesozoic, crocs are much less notorious.  In this post, I’ll go over the major branches of the pseudosuchian family tree, with examples and pictures, to give you an idea of the amazing croc diversity the world used to have.
 
 ## Pseudosuchia
-Pseudosuchia means “false crocodile,” and is a subgroup of Archosauria and the **sister clade** to Ornithodira.  Pseudosuchians include everything more closely related to modern crocs than to birds.  Some phylogenies include Phytosauria within Pseudosuchia--phytosaurs were Triassic semi-aquatic predators that superficially look a lot like modern crocs--but it’s now mostly agreed that pseudosuchians and ornithodirans are more closely related to each other than either is to phytosaurs.
+Pseudosuchia means “false crocodile,” and is a subgroup of Archosauria (which includes crocs and birds) and the **sister clade** to Ornithodira (which includes birds).  Pseudosuchians include everything more closely related to modern crocs than to birds.  Some phylogenies include Phytosauria within Pseudosuchia--phytosaurs were Triassic semi-aquatic predators that superficially look a lot like modern crocs--but it’s now mostly agreed that pseudosuchians and ornithodirans are more closely related to each other than either is to phytosaurs.
 
 It’s now known through **bone histology** that warm-bloodedness is the archosaurian ancestral condition--that is, the ancestors of crocs and birds were warm-blooded, and modern crocs evolved to be cold-blooded later on.  We don’t know which pseudosuchians were which in terms of endo- or ectothermy, but from our best guess at their lifestyles based on their morphology, it seems that many croc relatives were warm-blooded and led active lifestyles, and some may even have been fluffy.
 
@@ -79,7 +79,7 @@ Above: *Postosuchus*, a 4-meter, 300 kg apex predator from the Late Triassic.  T
 Above: *Rauisuchus*, a similarly-sized quadrupedal apex predator from the Middle to Late Triassic.  To me, these guys look like someone put a *Tyrannosaurus* head on a croc body.
 
 ## Jurassic and Cretaceous crocs
-Despite the setback crocs suffered during the end-Triassic extinction and during the rise of the dinosaurs, they maintained a considerable amount of diversity throughout the rest of the Mesozoic.  Many of them developed some very derived traits, from mammal-like **heterodont dentition** to live birth and flippers for a fully-aquatic lifestyle.  Some lost their armor completely, while others developed extensive fused carapaces.  Some were under one meter long, while others could reach 12 meters and tipped the scales at 9 tonnes.
+Despite the setback crocs suffered during the end-Triassic extinction and during the rise of the dinosaurs, they maintained a considerable amount of diversity throughout the rest of the Mesozoic.  Many of them developed some very derived traits, from mammal-like molars to live birth and flippers for a fully-aquatic lifestyle.  Some lost their armor completely, while others developed extensive fused carapaces.  Some were under one meter long, while others could reach 12 meters and tipped the scales at 9 tonnes.
 
 ### Protosuchia
 
