--- a/_posts/2019-10-01-inktober.markdown
+++ b/_posts/2019-10-01-inktober.markdown
@@ -75,7 +75,7 @@ Day 5: Build - *Protoceratops*.  Drawn in about an hour.
 
 *Protoceratops* was a small ceratopsian from Late Cretaceous Mongolia.  It lived in the desert alongside *Velociraptor*, and was probably **cathemeral**, meaning that rather than being nocturnal or diurnal, it was active at sporadic times during the day and night.
 
-I chose *Protoceratops* to be my “build” because of its fossilized record of extensive nesting behavior.  A *Protoceratops* nest and a Psittacosaurus nest (another small basal ceratopsian) have been found that each contained lots of yearlings, which means that the young remained in the nest for quite awhile after hatching.  In the case of *Psittacosaurus*, the nest also contained a subadult that appeared to be babysitting.  All this makes me think that *Protoceratops* probably cared a lot about how its nest was constructed, inspiring this piece.
+I chose *Protoceratops* to be my “build” because of its fossilized record of extensive nesting behavior.  A *Protoceratops* nest and a *Psittacosaurus* nest (another small basal ceratopsian) have been found that each contained lots of yearlings, which means that the young remained in the nest for quite awhile after hatching.  In the case of *Psittacosaurus*, the nest also contained a subadult that appeared to be babysitting.  All this makes me think that *Protoceratops* probably cared a lot about how its nest was constructed, inspiring this piece.
 
 An interesting thing to note is the huge number of dinosaurs in these litters--15 for *Protoceratops* and 24 for *Psittacosaurus*.  Most animals that care for their offspring only have a few, because of the large amount of resources each one requires.  This is known as **K-strategy** (the K stands for Karrying Kapacity...in German).  On the other hand, animals who have a lot of offspring and don’t care for any of them, like a seahorse, are known as **r-strategists** (the r stands for rate.  Both these terms come from the math behind population dynamics).  These basal ceratopsians show a confusing mix of both strategies--a rather large number of offspring (though 24 babies is still nothing compared to the thousands put out by many sea creatures) with extensive parental and sibling care.
 
@@ -85,7 +85,7 @@ An interesting thing to note is the huge number of dinosaurs in these litters--1
 
 Day 6: Husky - *Olorotitan*.  Drawn in about 4 hours.  All those ovals...
 
-*Olorotitan* (meaning “swan titan”) was a lambeosaurine “duck-billed” dinosaur from Late Cretaceous Russia.  Lambeosaurinae are the bony-crested subset of hadrosaurs (the soft- or non-crested group is called Saurolophinae), which were medium-sized grazers with advanced chewing abilities--essentially, they filled the same niche as cows do today.  Typically, these guys are pictured as pretty lithe, but in the book All Yesterdays, paleoartist John Conway suggested they may have been a bit more...husky.  This illustration is heavily inspired by his [depiction of *Parasaurolophus*](https://johnconway.co/ay_parasaurolophus) from that book.
+*Olorotitan* (meaning “swan titan”) was a lambeosaurine “duck-billed” dinosaur from Late Cretaceous Russia.  Lambeosaurinae are the bony-crested subset of hadrosaurs (the soft- or non-crested group is called Saurolophinae), which were medium-sized grazers with advanced chewing abilities--essentially, they filled the same niche as cows do today.  Typically, these guys are pictured as pretty lithe, but in the book *All Yesterdays*, paleoartist John Conway suggested they may have been a bit more...husky.  This illustration is heavily inspired by his [depiction of *Parasaurolophus*](https://johnconway.co/ay_parasaurolophus) from that book.
 
 What’s with the huge, dragonlike scales? A [fossil](https://www.nationalgeographic.com/science/phenomena/2013/12/12/surpise-well-studied-dinosaur-actually-had-a-cocks-comb/) of an *Edmontosaurus*’s neck and back of head (a related but soft-crested hadrosaur) was found with these huge oval scales preserved. I've seen reconstructions that incorporate the big scales on the neck but show the rest of the body with normal-sized scales, but I thought, why would they stop at the neck?  And so I got myself into a multi-hour circle-drawing predicament.  Here, a bull *Olorotitan* vegges out.  Look how into himself he is.
 
@@ -97,9 +97,9 @@ Day 7: Enchanted - *Carnotaurus*.  Drawn in about 40 minutes.
 
 *Carnotaurus* (meaning “meat bull”--people often say it means “meat-eating bull,” but it doesn’t) was a Late Cretaceous South American abelisaur, a group of short-faced, medium-sized, leggy carnivores with head ornamentation and comically tiny arms.  They hunted sort of like big cats, biting once and then holding on until the prey was subdued, rather than going for raw bite force--that’s why their skulls are shorter than, say, *Tyrannosaurus*: *Carnotaurus*’s jaws were stronger in torsion but worse in compression.  They also weren’t nearly as big; *Carnotaurus* maxed out at 2.5ish tons, while *Tyrannosaurus* was about 6 times heavier.
 
-*Carnotaurus* is known from a single, nearly complete specimen, so while we understand its anatomy well, we don’t know much about its ontogeny or if it exhibited sexual dimorphism.  I went with very little sexual dimorphism in this piece because none is apparent in the closely related Majungasaurus, which is known from many specimens.  The only difference between Mr. and Ms. in this picture is that the lady has skinnier horns, but if they were in color, he would be brightly colored while she would be more plain.
+*Carnotaurus* is known from a single, nearly complete specimen, so while we understand its anatomy well, we don’t know much about its ontogeny or if it exhibited sexual dimorphism.  I went with very little sexual dimorphism in this piece because none is apparent in the closely related *Majungasaurus*, which is known from many specimens.  The only difference between Mr. and Ms. in this picture is that the lady has skinnier horns and bare arms, but if they were in color, he would be brightly colored while she would be more plain.
 
-For “enchanted,” I wanted to draw a mating dance, and I picked *Carnotaurus* because of Trey the Explainer’s [video](https://www.youtube.com/watch?v=slcVvR7UMik&t=1401s) and the “pom pom arms” depiction in All Yesterdays.  Their head ornamentation was clearly for display and intra-specific competition (why ram prey if you have a bear trap for a mouth?).  Their tiny arms also had an unusually wide range of motion for a theropod, and could stick straight out, possibly making a striking profile when viewed from the front.  I based the mating dance pose on that of the sharp-tailed grouse, which seemed ideal for showing off the horns, arms, and tail.  Do you think the object of his affection is enchanted, or just humoring him?
+For “enchanted,” I wanted to draw a mating dance, and I picked *Carnotaurus* because of Trey the Explainer’s [video](https://www.youtube.com/watch?v=slcVvR7UMik&t=1401s) and the “pom pom arms” depiction in *All Yesterdays*.  Their head ornamentation was clearly for display and intra-specific competition (why ram prey if you have a bear trap for a mouth?).  Their tiny arms also had an unusually wide range of motion for a theropod, and could stick straight out, possibly making a striking profile when viewed from the front.  I based the mating dance pose on that of the sharp-tailed grouse, which seemed ideal for showing off the horns, arms, and tail.  Do you think the object of his affection is enchanted, or just humoring him?
 
 Pose references: [1](https://www.deviantart.com/fredthedinosaurman/art/Dinosaur-Sketches-731805206)
 [2](https://www.deviantart.com/thek560/art/Carnotaurus-808805892)
@@ -206,7 +206,7 @@ Day 15: Legend - *Tyrannosaurus rex* through the years.
 Here are four depictions of *Tyrannosaurus* showing how our understanding of this legendary dinosaur has changed over the years.
 
 1. In the early 1900s, dinosaurs and paleontology were very much in vogue.  Charles R. Knight was one of the most influential paleoartists of the time, capturing the public imagination with dynamic scenes featuring extinct creatures.  Paleontology and paleoart were very young back then, and though we can now spot a lot of inaccuracies, the scientists and artists of the time did a really good job with what they knew then.
-2. In the Dinosaur Renaissance beginning in the late 1960s with the discovery of Deinonychus and culminating in the release of the movie _Jurassic Park_ in 1993, dinosaurs re-emerged into the public view with new vitality.  Now their relationship to birds was well accepted, and they were understood to be warm-blooded, active, successful animals rather than sluggish, oversized swamp lizards that deserved to go extinct.  Theropods’ posture was corrected--they stopped being shown dragging their tails and walking upright like kangaroos, and instead were depicted balancing horizontally with stiffened tails.
+2. In the Dinosaur Renaissance beginning in the late 1960s with the discovery of *Deinonychus* and culminating in the release of the movie _Jurassic Park_ in 1993, dinosaurs re-emerged into the public view with new vitality.  Now their relationship to birds was well accepted, and they were understood to be warm-blooded, active, successful animals rather than sluggish, oversized swamp lizards that deserved to go extinct.  Theropods’ posture was corrected--they stopped being shown dragging their tails and walking upright like kangaroos, and instead were depicted balancing horizontally with stiffened tails.
 3. In 2012, the discovery of *Yutyrannus*, a completely feathered yeti-esque tyrannosaur, caused paleoartists to start feathering basically all coelurosaurs, including The King, due to the principle of phylogenetic bracketing.  The hyper-realistic dinosaur simulator game _Saurian_ was no exception, creating a beautiful fluffy rex (though they’ve since updated their depiction again to reflect more current findings).  Some other important corrections between this depiction and the Dinosaur Renaissance one are the presence of lips that cover the teeth while the mouth is closed and hands that are oriented as if about to clap rather than pronated like a cat’s paws.
 4. Since 2012, more discoveries of *Tyrannosaurus* skin impressions show that it was probably entirely secondarily scaly, having lost its feathers as it got super-sized in order to better cool off.  Read more about this [here](http://markwitton-com.blogspot.com/2017/06/revenge-of-scaly-tyrannosaurus.html).
 
@@ -259,8 +259,6 @@ This prompt was a really good one for me because there are so many Mesozoic rept
  
 Since the discovery of *Halszkaraptor*, I’m happily reminded of it whenever I see a cormorant.  It’s cool to see a modern animal filling its ancestral cousin’s shoes.
  
-My paleo blog: [obscuredinosaurfacts.com](http://obscuredinosaurfacts.com)
- 
 ### Day 19: Sling
 
 ![inktober-19](/assets/images/posts/inktober-19.jpg)
@@ -279,11 +277,11 @@ Since they’re so convergent with dolphins, and dolphins exhibit “infant-carr
 
 Day 20: Tread - *Vouivria* and *Plesiochelys*.  Drawn in about an hour.
  
-One day in Late Jurassic Switzerland, an unfortunate turtle was trodden upon by a sauropod.  Just last month, the fossil preserving this tragic accident was found--a smashed *Plesiochelys* carapace within a sauropod footprint.  We don’t know what sauropod was the culprit, so I picked Vouivria since it’s pretty new (described 2017) and roughly matches the time, place, and size of the incident.  *Vouivria* was a basal brachiosaur that weighed about 15 tons--small-to-medium for a sauropod (an elephant is around 7 tonnes; the largest titanosaurs got up to 76 tonnes!).
+One day in Late Jurassic Switzerland, an unfortunate turtle was trodden upon by a sauropod.  Just last month, the fossil preserving this tragic accident was found--a smashed *Plesiochelys* carapace within a sauropod footprint.  We don’t know what sauropod was the culprit, so I picked *Vouivria* since it’s pretty new (described 2017) and roughly matches the time, place, and size of the incident.  *Vouivria* was a basal brachiosaur that weighed about 15 tons--small-to-medium for a sauropod (an elephant is around 7 tonnes; the largest titanosaurs got up to 76 tonnes!).
  
 Why does it appear to have a beak?  Well, in 2017 a fossil skull of its close-ish cousin, *Camarasaurus*, was found with soft tissue preserved, showing that it had extensive mouth-gear, possibly including a keratinous beak.  And at SVP 2019 on October 10, research was presented that examined more sauropod fossils and corroborated the theory further (good thing I put off doing an Inktober sauropod until Day 20!).  This doesn’t strike me as too far-fetched, given how many times beaks have arisen independently among amniotes (I can think of at least 12 off the top of my head, which I’m sure isn’t a comprehensive list).  Beaks are a very **homoplastic** trait.  Personally, I think *Vouivria* looks pretty good in a beak.
  
-Looking back at it now, I’m pretty sure Vouivria’s neck couldn’t actually bend the way it does in the last panel...whoops...
+Looking back at it now, I’m pretty sure *Vouivria*’s neck couldn’t actually bend the way it does in the last panel...whoops...
  
 [Footprint Find](https://www.nytimes.com/2019/09/05/science/dinosaur-crushed-sea-turtle.html)
 [Camarasaurus Beak](https://www.sciencemag.org/news/2019/10/giant-sauropod-dinosaurs-may-have-sported-turtlelike-beaks)
@@ -302,7 +300,7 @@ Day 21: Treasure - *Oryctodromeus*.  Drawn in about an hour.
 
 Day 22: Ghost - *Effigia*.  Drawn in about an hour.  Previously in my Inktober series, we saw a crocodilian pretending to be a wolf (Day 16); now, we have one pretending to be a dinosaur.  That crurotarsal ankle looks weirdly humanlike...
  
-*Effigia* was a very strange crocodilian from Latest Triassic New Mexico.  It was found by Edwin Colbert in 1947 in a *Coelophysis* bone bed at Ghost Ranch, and due to its extreme convergence with theropod dinosaurs, he just thought *Effigia* was another *Coelophysis*, packed it up in plaster, and forgot about it.  It wasn’t until 2006 that someone opened the jacket and noticed that it was a beaked, herbivorous crocodilian.  You can easily tell a crocodilian skeleton from a dinosaur skeleton based on the ankle--crocodilians (and, convergently, mammals) have **crurotarsal** ankles that hinge over two points and have a large heel for the calf muscle to attach to.  Dinosaurs (including birds) have **mesotarsal** ankles, which hinge over one point and have no heel.
+*Effigia* was a very strange crocodilian from Latest Triassic New Mexico.  It was found by Edwin Colbert in 1947 in a *Coelophysis* (a common small carnivorous dinosaur) bone bed at Ghost Ranch, and due to its extreme convergence with theropod dinosaurs, he thought *Effigia* was just another *Coelophysis*, packed it up in plaster, and forgot about it.  It wasn’t until 2006 that someone opened the jacket and noticed that it was a beaked, herbivorous crocodilian.  You can easily tell a crocodilian skeleton from a dinosaur skeleton based on the ankle--crocodilians (and, convergently, mammals) have **crurotarsal** ankles that hinge over two points and have a large heel for the calf muscle to attach to.  Dinosaurs (including birds) have **mesotarsal** ankles, which hinge over one point and have no heel.
  
 “*Effigia*” means “ghost” in Latin, referring both to its discovery at Ghost Ranch and its elusiveness, hiding amongst the *Coelophysis*.
 
@@ -316,7 +314,7 @@ In early Late Triassic Argentina, the age of dinosaurs was just beginning.  The 
  
 *Herrerasaurus* shared its environment with the large terrestrial crocodilian *Saurosuchus*, and the giant beaked dicynodont (stem-mammal) *Ischigualastia*.  Altogether, the fauna of this period looked pretty alien compared to what we’re used to today.  These creatures are really, really ancient--this was 231 million years ago.  For scale, *Tyrannosaurus* lived 66 million years ago; *Herrerasaurus* is 3 times more ancient to *Tyrannosaurus* than *Tyrannosaurus* is to now!
  
-Here, a pack of *Herrerasaurus* chase a *Saurosuchus* away from an *Ischigualastia* carcass.  Are they defending their own kill, or stealing Saurosuchus’s?  One on one, *Herrerasaurus* would’ve been no match for *Saurosuchus*, but a mob of them is something *Saurosuchus* doesn’t want to risk getting involved with.  I’ve given *Herrerasaurus* some protofeathers because we now think it was the archosaurian ancestral condition, but not a lot of art currently reflects that.  (You know what else is rare in paleoart right now?  Dinosaurs and pseudosuchians from angles other than side view.)
+Here, a pack of *Herrerasaurus* chase a *Saurosuchus* away from an *Ischigualastia* carcass.  Are they defending their own kill, or stealing *Saurosuchus*’s?  One on one, *Herrerasaurus* would’ve been no match for *Saurosuchus*, but a mob of them is something *Saurosuchus* doesn’t want to risk getting involved with.  I’ve given *Herrerasaurus* some protofeathers because we now think it was the archosaurian ancestral condition, but not a lot of art currently reflects that.  (You know what else is rare in paleoart right now?  Dinosaurs and pseudosuchians from angles other than side view.)
  
 ### Day 24: Dizzy
 
@@ -340,7 +338,7 @@ Day 25: Tasty - *Nothronychus*.  Drawn in about 40 minutes.
  
 Remember [this meme](https://imgur.com/gallery/c2ExZ)?  Here’s a recreation of it, but with a dinosaur!
  
-*Nothronychus* (meaning “sloth claw”) was a therizinosaur from Late Cretaceous North America, one of the family of beaked, herbivorous maniraptors with huge claws for stripping vegetation.  They’re one of the many groups of saurischians that switched from carnivory to herbivory / omnivory, alongside the sauropods, ornithomimosaurs, oviraptorosaurs, and various birds.  Why is going from carnivore to herbivore so common, while going the other way is so rare?  I couldn’t actually find any answers to this.  If you have any theories, let me know!
+*Nothronychus* (meaning “sloth claw”) was a therizinosaur from Late Cretaceous North America, one of the family of beaked, herbivorous maniraptorans with huge claws for stripping vegetation.  They’re one of the many groups of saurischians that switched from carnivory to herbivory / omnivory, alongside the sauropods, ornithomimosaurs, oviraptorosaurs, and various birds.  Why is going from carnivore to herbivore so common, while going the other way is so rare?  I couldn’t actually find any answers to this.  If you have any theories, let me know!
  
 [Reference](https://www.deviantart.com/stygimolochspinifer/art/31-Day-Palette-Challenge-Lingyuanosaurus-791817133)
  
@@ -382,7 +380,7 @@ Day 28: Ride - *Suchomimus*.  Drawn in about 30 minutes.
 
 Day 29: Injured - *Stegosaurus*.  Drawn in about an hour.
 
-In Late Jurassic Colorado, a *Stegosaurus stenops* sits down to nurse its injured thagomizer spike.  The spike broke off several months ago, and since then infection has set in, causing internal bone loss and a “melted candle wax” appearance.  Unbeknownst to this *Stegosaurus*, drought and forest fires will strike the area shortly, leaving so many animals dead that the scavengers aren’t able to keep up.  This weakened *Stegosaurus* will be one of the drought’s victims, and its carcass will later be buried mostly untouched by a flash flood when the drought breaks.  Then, hundreds of millions of years later, it will be dug up by curious primates, be given the label DMNH 2818, and have its story pieced back together.
+In Late Jurassic Colorado, a *Stegosaurus stenops* sits down to nurse its injured thagomizer spike.  The spike broke off several months ago, and since then infection has set in, causing internal bone loss and a “melted candle wax” appearance.  Unbeknownst to this *Stegosaurus*, drought and forest fires will strike the area shortly, leaving so many animals dead that the scavengers won't be able to keep up.  This weakened *Stegosaurus* will be one of the drought’s victims, and its carcass will later be buried mostly untouched by a flash flood when the drought breaks.  Then, hundreds of millions of years later, it will be dug up by curious primates, be given the label DMNH 2818, and have its story pieced back together.
 
 [Art Reference](https://www.deviantart.com/fredthedinosaurman/art/Dinosaur-Sketches-731805206)
 [Description of Fossil](https://books.google.com/books?id=CLEPeg_SjTcC&pg=PA128&lpg=PA128&dq=DMNH+2818&source=bl&ots=mpIhadp24L&sig=ACfU3U1uKvQ0G7efAl3dpSfEYMp-jct-0g&hl=en&sa=X&ved=2ahUKEwiNub_i35TlAhVGo54KHQnjCmIQ6AEwDHoECAgQAQ#v=onepage&q=DMNH%202818&f=false)
@@ -405,7 +403,7 @@ Day 31: Ripe - *Acrocanthosaurus*, rolling in something.  Drawn in about an hour
 
 *Acrocanthosaurus* (meaning “high spine lizard”) was a carcharodontosaur from Early Cretaceous North America.  It was one of the “shark-toothed dinosaurs,” and was the apex predator of its ecosystem (it would be replaced by *Tyrannosaurs* a few tens of millions of years later).  *Acrocanthosaurus* is notable for its tall neural spines that probably supported a chunky ridge of muscle and fat along its back, sort of like a bison.
 
-Here, an *Acrocanthosaurus* rolls in a pile of stinky Ginkgo digitata false-fruit.  You may be familiar with the stench of *Ginkgo bilboa*, the only living species of ginkgo tree, whose carrion-like musk attracts predators and scavengers to disperse the seeds.  The ripe false-fruits (they’re not true fruits because ginkgo is a gymnosperm, not an angiosperm) tend to fall in big stinky piles, which looked and smelled like a lot of fun to this *Acrocanthosaurus*.
+Here, an *Acrocanthosaurus* rolls in a pile of stinky *Ginkgo digitata* false-fruit.  You may be familiar with the stench of *Ginkgo bilboa*, the only living species of ginkgo tree, whose carrion-like musk attracts predators and scavengers to disperse the seeds.  The ripe false-fruits (they’re not true fruits because ginkgos are gymnosperms, not angiosperms) tend to fall in big stinky piles, which looked and smelled like a lot of fun to this *Acrocanthosaurus*.
 
 I picked *Acrocanthosaurus* because (a) I haven’t done any allosauroids yet for Inktober (and *Acrocanthosaurus*  is indisputably the coolest allosauroid), and (b) I wanted to show a stereotypical bloodthirsty carnivore interacting peacefully with plants, because it’s a thing that presumably happened all the time but is rarely shown in paleoart.
 
