--- a/_posts/2020-07-22-yixian.md
+++ b/_posts/2020-07-22-yixian.md
@@ -69,7 +69,7 @@ Many varied sizes of terrestrial carnivores, mainly theropods but also some earl
 
 ![Yutyrannus](/assets/images/posts/yutyrannus.jpg)
 
-Above: a mother *Yutyrannus* brings home an unfortunate *Psittacosaurus* for her chicks, while an unnamed early mammal waits for leftovers.
+Above: a mother *Yutyrannus* brings home an unfortunate *Psittacosaurus* for her chicks, while an unnamed early mammal, possibly *Eomaia*, waits for leftovers.
 
 The welterweight class of predators included the wolf-sized dromaeosaurs *Tianyuraptor* and *Zhenyuanlong*, the giant compsognathid *Sinocalliopteryx*, and the basal tyrannosauroid *Dilong*.  *Zhenyuanlong* is notable for changing our understanding of the evolution of wings, and *Dilong* is notable for being an ancestral cousin to the giant tyrannosaurs of the Late Cretaceous, including *Tarbosaurus* and *Tyrannosaurus*.
 
@@ -130,7 +130,7 @@ Here’s another group that would become much more diverse and disparate later i
 Above: A collection of cat-sized or smaller pterodactyloid pterosaurs.  *Eopteranodon* is number 8, and *Gegepterus* is number 2.
 
 #### Istiodactylidae
-The last main niche filled by pterosaurs at Yixian was the generalist role, played by the istiodactylids.  These were small to medium crestless pterosaurs with rather unimpressive teeth, that sort of split the difference between the completely toothless tapejarids and the toothy boreopterids, and done both terrestrial stalking and fishing depending on the situation.  These included *Luchibang*, *Longchengpterus*, *Haopterus*, and others.
+The last main niche filled by pterosaurs at Yixian was the generalist role, played by the istiodactylids.  These were small to medium crestless pterosaurs with rather unimpressive teeth, that sort of split the difference between the completely toothless tapejarids and the toothy boreopterids, and would've done both terrestrial stalking and fishing depending on the situation.  These included *Luchibang*, *Longchengpterus*, *Haopterus*, and others.
 
 ![istiodactylid](/assets/images/posts/istiodactylid.png)
 
