--- a/_posts/2019-11-16-fuzz.markdown
+++ b/_posts/2019-11-16-fuzz.markdown
@@ -143,9 +143,9 @@ TL;DR: basically all archosauromorphs are candidates for fluff, phylogenetically
 
 ### But what type of fluff?
 Modern birds have five different types of feathers, called Stage 1 through Stage 5 in order of increasing complexity.  They look like this:
-![feathertypes](/assets/feathertypes.gif)
+![feathertypes](/assets/images/posts/feathertypes.gif)
 
-Stage 1 is a simple filament, which is probably ancestral to all archosaurs.  That means basically any archosaur under the *Yutyrannus* threshold is fair game for sporting these.  Stage 2 is a fiber bundle, such as the down feathers found in a pillow.  The small ornithischian Kulindadromeus was known to have this type of feather, which means that phylogenetically, any dinosaur can have these, but be wary of putting them on non-dinosaurian archosaurs.  Stage 3 is a simple branched feather.  These are known from within Maniraptoriformes--anything more birdlike than *Sinosauropteryx*, which is known not to have anything more complex than Stage 2.  Stage 4 has the feather barbs branching further and sporting barbules, which allow the feather to zipper itself together into a single surface, and Stage 5 is a fully-developed flight feather with an asymmetric leading edge and a smooth texture.  Only pennaraptorans (oviraptorosaurs and more birdlike) have Stage 4 and 5 feathers, and probably only flighted paravians would have had Stage 5.  From fossilized skin impressions (outlined in Mark Witton's chart above), we know that true sauropods and the ceratosaur *Carnotaurus* had secondarily lost their fuzz, so for creatures nearby these on the family tree, feather with extreme caution.
+Stage 1 is a simple filament, which is probably ancestral to all archosaurs.  That means basically any archosaur under the *Yutyrannus* threshold is fair game for sporting these.  Stage 2 is a fiber bundle, such as the down feathers found in a pillow.  Stage 3 is a simple branched feather.  These are known from within Maniraptoriformes--anything more birdlike than *Sinosauropteryx*, which is known not to have anything more complex than Stage 2.  Stage 4 has the feather barbs branching further and sporting barbules, which allow the feather to zipper itself together into a single surface, and Stage 5 is a fully-developed flight feather with an asymmetric leading edge and a smooth texture.  Only pennaraptorans (oviraptorosaurs and more birdlike) have Stage 4 and 5 feathers, and probably only flighted paravians would have had Stage 5.  From fossilized skin impressions (outlined in Mark Witton's chart above), we know that true sauropods and the ceratosaur *Carnotaurus* had secondarily lost their fuzz, so for creatures nearby these on the family tree, feather with extreme caution.
 
 Ornithischians, having inherited the basal filament-producing ability, went on to develop specialized structures not covered in Stages 1-5.  *Kulindadromeus* had two types of unusual feathers alongside Stages 1 and 2: scales with filaments attached to them, and bundles of ribbonlike parallel filaments.  However, since ornithischians have no modern descendents, we don't know what other types of integument are possible.  As more discoveries are made, we will doubtless find additional unfamiliar fuzz structures preserved.
 
